fixed typo in post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: home
       </div>
       {% include newsletter.html %}
       <div class="c-recent-post">
-        <h4 class="c-recent__title">You might also enjou</h4>
+        <h4 class="c-recent__title">You might also enjoy</h4>
         <div class="c-recent__box">
         {% for post in site.related_posts limit:4 %}
         {% if post.image %}
