simplify category loading page

--- a/_sass/5-components/_content.scss
+++ b/_sass/5-components/_content.scss
@@ -12,6 +12,10 @@
   margin-left: 360px;
 }
 
+.c-pagination {
+  margin: 20px auto;
+}
+
 @media only screen and (max-width: 900px) {
   .c-content {
     position: static;
